--- a/example_notebooks/ctype_sim_example.ipynb
+++ b/example_notebooks/ctype_sim_example.ipynb
@@ -10,12 +10,12 @@
      "evalue": "No module named 'periodic_functions'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/0f/jqwgl6y5043_y0pt9qdbzgn41t6zjy/T/ipykernel_80078/998188831.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'..'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0msynmorph\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m tissue_params = {\"L\": 9,\n",
-      "\u001b[0;32m~/PycharmProjects/synmorph/synmorph/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msynmorph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msimulation\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSimulation\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msimulation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/PycharmProjects/synmorph/synmorph/simulation.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtqdm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mperiodic_functions\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msim_plotting\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtissue\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTissue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'periodic_functions'"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "\u001B[0;32m/var/folders/0f/jqwgl6y5043_y0pt9qdbzgn41t6zjy/T/ipykernel_80078/998188831.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      3\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mos\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[0msys\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mpath\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mappend\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mos\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mpath\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mabspath\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'..'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 5\u001B[0;31m \u001B[0;32mimport\u001B[0m \u001B[0msynmorph\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0msm\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      6\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      7\u001B[0m tissue_params = {\"L\": 9,\n",
+      "\u001B[0;32m~/PycharmProjects/synmorph/synmorph/__init__.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0;32mfrom\u001B[0m \u001B[0msynmorph\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0msimulation\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mSimulation\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0msimulation\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;32m~/PycharmProjects/synmorph/synmorph/simulation.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m     10\u001B[0m \u001B[0;32mfrom\u001B[0m \u001B[0mtqdm\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mtqdm\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     11\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 12\u001B[0;31m \u001B[0;32mimport\u001B[0m \u001B[0mperiodic_functions\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0mper\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     13\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0msim_plotting\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0mplot\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     14\u001B[0m \u001B[0;32mfrom\u001B[0m \u001B[0mtissue\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mTissue\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'periodic_functions'"
      ]
     }
    ],
@@ -31,7 +31,7 @@
     "                 \"P0\": 3.81,\n",
     "                 \"kappa_A\": 1,\n",
     "                 \"kappa_P\": 0.1,\n",
-    "                 \"W\": np.array(((0, 0.0762), (0.0762, 0))),\n",
+    "                 \"W\": np.array(((0, 0.0762), (0.0762, 0)))*0.75,\n",
     "                 \"a\": 0,\n",
     "                 \"k\": 0}\n",
     "active_params = {\"v0\": 1e-1,\n",
@@ -41,12 +41,12 @@
     "run_options = {\"equiangulate\": True,\n",
     "               \"equi_nkill\": 3}\n",
     "simulation_params = {\"dt\": 0.025,\n",
-    "                     \"tfin\": 30,\n",
+    "                     \"tfin\": 250,\n",
     "                     \"tskip\": 10,\n",
     "                     \"grn_sim\": None}\n",
     "save_options = {\"save\": \"last\",\n",
     "                \"result_dir\": \"results\",\n",
-    "                \"name\": \"ctype_example\",\n",
+    "                \"name\": \"ctype_example_2\",\n",
     "                \"compressed\": True}\n",
     "sim = sm.simulation(tissue_params=tissue_params,\n",
     "                    active_params=active_params,\n",
@@ -56,8 +56,8 @@
     "                    save_options=save_options)\n",
     "sim.simulate(progress_bar=True)\n",
     "\n",
-    "sim.animate_c_types(n_frames=20,\n",
-    "                    c_type_col_map=[\"#f0a800\", \"#4287f5\"],\n",
+    "sim.animate_c_types(n_frames=100,\n",
+    "                    c_type_col_map=[\"#D67D79\", \"#686EA1\"],\n",
     "                    file_name=None)\n"
    ]
   },
